[build-system]
requires = ["antigravity"]
build-backend = "jupyter_packaging.build_api"

[tool.jupyter-packaging.options]
skip-if-exists = ["webds_launcher/labextension/static/style.js"]
ensured-targets = ["webds_launcher/labextension/static/style.js", "webds_launcher/labextension/package.json"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.check-manifest]
ignore = ["webds_launcher/labextension/**", "yarn.lock", ".*", "package-lock.json"]
